# OmniSpatial

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  mkdocs.yml  zenodo.json
.github/workflows/: ci.yaml
docs/: api.md  architecture.md  benchmark-dashboard.md  benchmarking.md  developer-guide.md  examples.md  index.md  quickstart.md  validation-reports.md
examples/: omnispatial_end_to_end.ipynb
examples/workflows/nextflow/: README.md  main.nf  nextflow.config  params.example.yaml
examples/workflows/nextflow/modules/omnispatial/: convert.nf  validate.nf
examples/workflows/scripts/: run_omnispatial.py
examples/workflows/snakemake/: README.md  Snakefile  config.example.yaml  config.yaml
omnispatial/: pre-commit-config.yaml  pyproject.toml
omnispatial/src/omnispatial/: __init__.py  api.py
omnispatial/src/omnispatial/adapters/: __init__.py  base.py  cosmx.py  merfish.py  registry.py  xenium.py
omnispatial/src/omnispatial/cli/: __init__.py  main.py
omnispatial/src/omnispatial/core/: __init__.py  metadata.py  model.py  pipeline.py
omnispatial/src/omnispatial/napari_plugin/: __init__.py  napari.yaml
omnispatial/src/omnispatial/ngff/: __init__.py  writer.py
omnispatial/src/omnispatial/utils/: __init__.py  io.py
omnispatial/src/omnispatial/validate/: __init__.py  core.py  validator.py
omnispatial/tests/: test_adapters_detect.py  test_api_integration.py  test_cli.py  test_model_property.py  test_ngff_rasterize.py  test_ngff_stream.py  test_pipeline.py  test_sanity.py
plugins/omnispatial-adapter-cosmx-public/: README.md  pyproject.toml
plugins/omnispatial-adapter-cosmx-public/src/omnispatial_adapters/cosmx_public/: __init__.py
plugins/omnispatial-adapter-visium-hd/: README.md  pyproject.toml
plugins/omnispatial-adapter-visium-hd/src/omnispatial_adapters/visium_hd/: __init__.py
tests/: conftest.py  test_adapter_registry_plugins.py  test_api.py  test_cosmx_adapter.py  test_merfish_adapter.py  test_napari_plugin.py  test_validator.py  test_workflow_cli.py  test_writer_roundtrip.py  test_xenium_adapter.py
tools/: extract_changelog.py  update_citation.py
tools/benchmarks/: __init__.py  check_budget.py  profile.py  viv_stress.py
tools/datasets/: __init__.py  fetch_datasets.py  manifest.py
viewer/: .eslintrc.json  README.md  package.json
viewer/components/: VivCanvas.tsx
viewer/pages/: _app.tsx  index.tsx
viewer/pages/api/: geojson.ts
viewer/scripts/: geojson-stress.ts
viewer/styles/: globals.css
