[tool.poetry]
name = "omnispatial"
version = "0.1.0"
description = "Cross-vendor converter, validator, and viewer for spatial omics with OME-NGFF and SpatialData outputs."
license = "MIT"
authors = ["OmniSpatial Contributors <opensource@omnispatial.org>"]
readme = "../README.md"
packages = [{ include = "omnispatial", from = "src" }]
homepage = "https://github.com/omnispatial/omnispatial"
repository = "https://github.com/omnispatial/omnispatial"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
typer = { version = "^0.9.0", extras = ["all"] }
pydantic = "^2.5.2"
numpy = "^1.26.0"
pandas = "^2.1.2"
anndata = "^0.9.2"
xarray = "^2023.10.0"
zarr = "^2.16.0"
ome-zarr = "^0.8.5"
spatialdata = "^0.4.0"
shapely = "^2.0.2"
tifffile = "^2023.9.26"
pyarrow = "^14.0.2"
rasterio = "^1.3.9"
dask = "^2023.10.1"
numcodecs = "^0.12.1"
rich = "^13.6.0"
pyyaml = "^6.0.1"
jsonschema = "^4.19.0"
napari = "^0.4.19"
napari-plugin-engine = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
hypothesis = "^6.88.1"
pytest-cov = "^4.1.0"
ruff = "^0.1.6"
black = "^23.11.0"
mypy = "^1.7.1"
pre-commit = "^3.5.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.2"

[tool.poetry.scripts]
omnispatial = "omnispatial.cli.main:app"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E203", "E501"]
exclude = ["docs", "build", "dist"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["omnispatial"]

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
