[tool.poetry]
name = "omnispatial-adapter-cosmx-public"
version = "0.1.0"
description = "OmniSpatial plugin adapter for CosMx public release datasets."
license = "MIT"
authors = ["OmniSpatial Contributors <opensource@omnispatial.org>"]
readme = "README.md"
packages = [{ include = "omnispatial_adapters", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
omnispatial = ">=0.1.0"
anndata = ">=0.9.2"
numpy = ">=1.26.0"
pandas = ">=2.1.2"
shapely = ">=2.0.2"
tifffile = ">=2023.9.26"

[tool.poetry.plugins."omnispatial.adapters"]
cosmx_public = "omnispatial_adapters.cosmx_public:CosMxPublicAdapter"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
