[tool.poetry]
name = "omnispatial-adapter-visium-hd"
version = "0.1.0"
description = "OmniSpatial plugin adapter for 10x Genomics Visium HD datasets."
license = "MIT"
authors = ["OmniSpatial Contributors <opensource@omnispatial.org>"]
readme = "README.md"
packages = [{ include = "omnispatial_adapters", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
omnispatial = ">=0.1.0"
anndata = ">=0.9.2"
numpy = ">=1.26.0"
pandas = ">=2.1.2"
scanpy = ">=1.9.0"
scipy = ">=1.11.0"
shapely = ">=2.0.2"
tifffile = ">=2023.9.26"

[tool.poetry.plugins."omnispatial.adapters"]
visium_hd = "omnispatial_adapters.visium_hd:VisiumHDAdapter"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
